--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome!!</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <meta key="title" content="Fasya Raihan Maulana" property="og:title" />
     <meta
       content="Make beautiful websites regardless of your design experience."
       property="og:description"
@@ -19,10 +19,11 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
+    <link href="/main.ico" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
